Fix login page spacing

--- a/resources/assets/styles/login.scss
+++ b/resources/assets/styles/login.scss
@@ -170,7 +170,6 @@ body.login form .input {
   @extend .bt-Button;
   @extend .bt-Button-blue;
 
-  margin-bottom: 5px;
   width: 100%;
   padding: responsive(3px, 15px, 320px, 500px);
   font-size: responsive(14px, 16px, 320px, 500px);
@@ -180,7 +179,7 @@ body.login form .input {
 .lg-Links,
 body.login #nav {
   display: grid;
-  margin: unset;
+  margin: responsive(2px, 10px, 320px, 500px) 0 0 0;
   padding: unset;
   width: 100%;
   max-width: responsive(200px, 250px, 320px, 500px);
@@ -198,7 +197,6 @@ body.login #nav a {
   text-align: center;
   font-size: responsive(12px, 14px, 320px, 500px);
   line-height: 1.2;
-  margin-bottom: 5px;
 
   @include media("sm") {
     margin-bottom: unset;
